// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wrapper success custom headers and body 1`] = `
Object {
  "body": "<h1>hello</h1>",
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "text/html",
  },
  "statusCode": "200",
}
`;

exports[`wrapper success defaults 1`] = `
Object {
  "body": "{\\"foo\\":\\"bar\\"}",
  "headers": Object {
    "Access-Control-Allow-Credentials": true,
    "Access-Control-Allow-Origin": "*",
    "Content-Type": "application/json",
  },
  "statusCode": "200",
}
`;
